Initial style changes

--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,6 @@
 /* Globals */
 a,a:focus,a:hover{color:#fff;}
-html,body{height:100%;background-color:#E91E63;}
+html,body{height:100%;background-color:#00ff99;}
 body{color:#fff;text-align:center;}
 .hide{display:none;}
 .landing-heading{font-family:'Source Code Pro',monospace;font-weight:400;}
