--- a/public/app.css
+++ b/public/app.css
@@ -1,7 +1,7 @@
 /* Globals */
 a,a:focus,a:hover{color:#fff;}
 html,body{height:100%;background-color:#00ff99;}
-body{color:#fff;text-align:center;}
+body{color:#000;text-align:center;}
 .hide{display:none;}
 .landing-heading{font-family:'Source Code Pro',monospace;font-weight:400;}
 
@@ -9,8 +9,8 @@ body{color:#fff;text-align:center;}
 .btn{font-family:'Source Code Pro',monospace;padding:0.5625rem 2.5rem;font-size:0.8125rem;font-weight:400;line-height:1.75rem;border-radius:0!important;-webkit-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-ms-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;transition:all .2s ease-in-out;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 .btn-lg{font-size:0.875rem;padding:0.6875rem 3.4375rem;line-height:1.75rem;}
 .btn:focus,.btn:active:focus,.btn.active:focus{outline:none;}
-.btn-primary{background-color:#270F34;border:1px solid #270F34;}
-.btn-primary:hover,.btn-primary:focus,.btn-primary:active{color:#fff;border:1px solid #2C96FF;background-color:#2C96FF;}
+.btn-primary{background-color:#808080;border:1px solid #808080;}
+.btn-primary:hover,.btn-primary:focus,.btn-primary:active{color:#fff;border:1px solid #b3b3b3;background-color:#b3b3b3;}
 
 /* Avatar */
 .avatar{width:100px;height:100px;}
