--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,6 @@
 /* Globals */
 a,a:focus,a:hover{color:#fff;}
-html,body{height:100%;background-color:#00ff99; width: 50%; height: 100%;}
+html,body{background-color:#00ff99;}
 body{color:#000;text-align:center; }
 .hide{display:none;}
 .landing-heading{font-family:'Source Code Pro',monospace;font-weight:400;}
@@ -25,4 +25,4 @@ body{color:#000;text-align:center; }
 .btn-home-hello{position:absolute;font-family:'Source Code Pro',monospace;font-size:11px;font-weight:400;color:rgba(255,255,255,0.85);top:15px;left:15px;padding:3px 20px;background-color:rgba(255,255,255,0.15);border-radius:6px;-webkit-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);-moz-box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);box-shadow:0px 0px 20px 0px rgba(0,0,0,0.15);}
 
 /* Classes */
-#section-1 {background-color:#ffffff;border:1px solid #ffffff;}
+#section-1 {background-image: url('img/skyline.png');}
