More style changes

--- a/public/app.css
+++ b/public/app.css
@@ -1,7 +1,7 @@
 /* Globals */
 a,a:focus,a:hover{color:#fff;}
 html,body{background-color:#00ff99;}
-body{color:#000;text-align:center;vertical-align:middle;}
+body{color:#000;}
 .hide{display:none;}
 .landing-heading{font-family:'Source Code Pro',monospace;font-weight:400;}
 
